Updates ca-ES language

--- a/language/ca-ES/ca-ES.plg_system_bfstop.ini
+++ b/language/ca-ES/ca-ES.plg_system_bfstop.ini
@@ -1,12 +1,12 @@
-;traducció feta per nouespai 11-06-2013
+;traducció feta per nouespai 29-11-2013
 
-FAILED_LOGIN_ATTEMPT="%s: Intent d'identificació erroni a %s"
+FAILED_LOGIN_ATTEMPT="Intent d'identificació erroni a %s"
 USERNAME="Nom d'usuari"
 IPADDRESS="Adreça IP"
 ERROR="Error"
 DATETIME="Dia i hora"
 ORIGIN="Origen"
-BLOCKED_IP_ADDRESS_BODY="%2$s: El bloqueig de l'adreça IP %1$s ha estat perquè hi havia massa intents fallits d'ingressar en poc temps. Aquests són els intents de:\n\n%3$s"
+BLOCKED_IP_ADDRESS_BODY="El bloqueig de l'adreçça IP %1$s ha estat perquè hi havia massa intents fallits d'ingressar en poc temps a %2$s. Aquests són tots els intents des d'aquesta adreça que hem registrat:\n\n%3$s\n\nAvís: Poden ésser més dels que causen el bloqueig; podria haver hagut intents anteriors, que ja van causar un bloqueig temporal llavors, o que estaven més separats que el que es considerava necessari per al bloqueig!"
 BLOCKED_IP_ADDRESS_SUBJECT="%s: Adreça IP bloquejada %s"
 BLOCKED_IP_MESSAGE="La teva adreça IP ha estat bloquejada perquè hi havia massa intents fallits d'ingressar en molt poc temps."
 X_ATTEMPTS_LEFT="Et resten %d intent(s) d'ingressar abans que la teva adreça IP sigui bloquejada. Si no recordes el nom o contrasenya, pots demanar al sistema que te la torni a enviar"
