--- a/language/ca-ES/ca-ES.plg_system_bfstop.sys.ini
+++ b/language/ca-ES/ca-ES.plg_system_bfstop.sys.ini
@@ -1,4 +1,4 @@
-;traducció feta per nouespai 08-06-2013
+;traducció feta i actualitzada per nouespai 29-11-2013
 
 PLG_SYSTEM_BFSTOP="Sistema - Brute Force Stop"
 PLG_BFSTOP_DESC="<h2>Brute Force Stop</ h2><div> Aquest connector proporciona els mitjans per evitar els atacs per força bruta a la teva instal·lació Joomla!. Per això, el connector emmagatzema informació sobre els intents fallits de connexió, de manera que en arribar a un nombre configurable d'intents fallits d'inici de sessió l'adreça IP de l'atacant pot ser bloquejada. A més, pot configurar notificacions sobre intents fallits i les adreces IP bloquejades, així com un retard variable després d'un inici de sessió fallit.</div><br /><div><em>No oblidis de configurar i publicar el connector després de la instal·lació!</em><br />Si tens qualsevol pregunta sobre el connector, visita <a href='https://github.com/codeling/bfstop'>El lloc del projecte a github</a>. Si hi ha algun problema en utilitzar el connector, no dubtis a reportar al <a href='https://github.com/codeling/bfstop/issues'>Seguiment d'incidències.</a></div><br/><div>En algunes parts, aquest connector s'inspira en els següents plugins Login Failed Log, Redirect Failed Logins and Ban IP Address/Range. Moltes gràcies als autors d'aquests connectors!<br /> Brute Force Stop és un connector <a target='_blank' href='http://www.joomla.org/'>Joomla!,</a> publicat sota la <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License.</a></div>"
@@ -16,6 +16,8 @@ NOTIFY_BLOCKED_NUMBER_LABEL="Missatges de bloqueig per dia"
 NOTIFY_BLOCKED_NUMBER_DESC="Amb quina freqüència es notificaran les IP bloquejades en un dia"
 DELAY_DURATION_LABEL="Retard"
 DELAY_DURATION_DESC="Retard (en segons) en un intent d'accés fallit"
+LOGLEVEL_LABEL="Iniciant sessió"
+LOGLEVEL_DESC="Determina si un informe sobre les activitats del connector ha de ser creat (això tan sols serà necessari en cas d'un problema, el fitxer de registre es pot trobar al directori de registres amb el nom plg_system_bfstop.log.php)"
 BLOCK_NUMBER_LABEL="Límit abans de bloquejar"
 BLOCK_NUMBER_DESC="Quantes vegades un usuari pot equivocar-se abans de que es bloquegi la IP"
 BLOCKED_MESSAGE_LABEL="Missatge de bloqueig"
@@ -26,7 +28,7 @@ NOTIFY_REMAINING_ATTEMPTS_LABEL="Intents restants"
 NOTIFY_REMAINING_ATTEMPTS_DESC="Activa o desactiva les notificacions sobre els intents restants. Si està habilitat, l'usuari, després de cada intent fallit d'inici de sessió, veurà un missatge en el formulari d'accés de quants intents d'inici de sessió encara estan disponibles abans que es bloquegi l'adreça IP. Aquest ajust només s'activa si s'ha habilitat el bloqueig (si el bloqueig està desactivat, les entrades 'restants' no tindrien sentit)."
 NOTIFY_BLOCKED_USER_LABEL="Missatge a l'usuari bloquejat"
 NOTIFY_BLOCKED_USER_DESC="Quan s'activa, en cas d'una adreça IP bloquejada, la notificació s'enviarà a l'usuari que va intentar connectar (només per descomptat, en cas que sigui un nom d'usuari existent)."
-USE_HTTP_ERROR_LABEL="Utilitza Error"
+USE_HTTP_ERROR_LABEL="Utilitza error HTTP"
 USE_HTTP_ERROR_DESC="Si està activat, bfstop enviarà un codi d'estat 403 (prohibit) si l'adreça IP dels usuaris està bloquejada"
 SELECTEDUSERS="L'usuari seleccionat"
 CUSTOMEMAILADDRESS="Adreça de correu electrònic personalitzada"
@@ -52,8 +54,17 @@ ENABLED_FOR_ORIGIN_DESC="Determina a quines parts del sistema de Joomla! han de 
 ENABLED_FOR_FRONTEND="Només Frontal"
 ENABLED_FOR_BACKEND="Només Administració"
 ENABLED_FOR_BOTH="Frontal i Administració"
-
-LOGLEVEL_LABEL="Carregant"
-LOGLEVEL_DESC="Determina si un informe sobre les activitats del connector ha de ser creat (això tan sols serà necessari en cas d'un problema, el fitxer de registre es pot trobar al directori de registres amb el nom plg_system_bfstop.log.php). També podeu establir el nivell de detall que ha de tenir el registre, per exemple, estableix ERROR només per obtenir informació sobre qualsevol error en el fitxer de registre."
-INFO="Missatge informatiu"
+FATAL="Error fatal"
+INFO="Misstage informatiu"
 DEBUG="Informació detallada"
+DELETE_OLD_ENTRIES_LABEL="Suprimeix les entrades antigues"
+DELETE_OLD_ENTRIES_DESC="Elimina les entrades més antigues que el nombre de setmanes que figuren en aquest camp (estableix a 0 per desactivar la supressió de les entrades antigues)."
+ADAPTIVE_DELAY_LABEL="Retard adaptatiu"
+ADAPTIVE_DELAY_DESC="Adapta el retard a la taxa actual de retards que han fallat. Augmentarà el retard cada vegada que hi ha un major nombre d'inicis de sessió com una contramesura per als atacs distribuïts."
+ADAPTIVE_DELAY_MAX_LABEL="Retard màxim"
+ADAPTIVE_DELAY_MAX_DESC="El termini màxim per a la resposta als intents de connexió fallits quan el retard adaptatiu s'activa"
+ADAPTIVE_DELAY_THRSH_MIN_LABEL="Nivell mínim"
+ADAPTIVE_DELAY_THRSH_MIN_DESC="El nivell en què el retard adaptatiu comença a fer efecte (mesurat en nombre d'inicis de sessió fallits en la darrera hora)"
+ADAPTIVE_DELAY_THRSH_MAX_LABEL="Nivell màxim"
+ADAPTIVE_DELAY_THRSH_MAX_DESC="El nivell en què el retard adaptatiu arriba al retard màxim (mesurat en nombre d'inicis de sessió fallits en la darrera hora)"
+DELAY_FIELDSET_LABEL="Retard"
