Updates fr-FR language

--- a/language/fr-FR/fr-FR.plg_system_bfstop.sys.ini
+++ b/language/fr-FR/fr-FR.plg_system_bfstop.sys.ini
@@ -1,4 +1,4 @@
-; Traduit pour la version 1.0.0 Beta1 par Flying_Lolo - 07/08/2013
+; Traduit pour la version 1.1.0 par Flying_Lolo - 30/11/2013
 ; Encodage UTF-8 - No BOM
 ; Fichier de traduction pour ./plugins/system/bfstop/language/fr-FR/
 
@@ -61,3 +61,15 @@ DEBUG="Information détaillée"
 ; Ajouté à compter de la version 1.0.0 Beta
 USE_HTTP_ERROR_LABEL="Utiliser les codes erreur HTTP"
 USE_HTTP_ERROR_DESC="Si cette option est activée, bfstop enverra un code erreur 403 (accès interdit) à l'utilisateur d'une adresse IP bloquée"
+; Ajouté à compter de la version 1.1.0
+DELETE_OLD_ENTRIES_LABEL="Effacement des anciennes entrées"
+DELETE_OLD_ENTRIES_DESC="Efface les entrées dont l'ancienneté excède le nombre de semaines indiqué dans ce champ de saisie (indiquer 0 pour désactiver cette fonction d'effacement automatique)."
+ADAPTIVE_DELAY_LABEL="Délai adaptatif"
+ADAPTIVE_DELAY_DESC="Adaptation du délai avant reconnexion au nombre de connexions échouées. Augmente le délai en cas d'accroissement du nombre de connexions comme contre-mesure aux attaques distribuées."
+ADAPTIVE_DELAY_MAX_LABEL="Délai maximum"
+ADAPTIVE_DELAY_MAX_DESC="Le délai maximum de reconnexion lorsque le délai adaptatif est actif"
+ADAPTIVE_DELAY_THRSH_MIN_LABEL="Seuil minimal"
+ADAPTIVE_DELAY_THRSH_MIN_DESC="Le seuil à partir duquel le délai adaptatif entre en fonction (mesuré à travers le nombre de connexions échouées dans la dernière heure)"
+ADAPTIVE_DELAY_THRSH_MAX_LABEL="Seuil maximal"
+ADAPTIVE_DELAY_THRSH_MAX_DESC="Le seuil à partir duquel le délai adaptatif est maximal (mesuré à travers le nombre de connexions échouées dans la dernière heure)"
+DELAY_FIELDSET_LABEL="Délai"
