--- a/language/fr-FR/fr-FR.plg_system_bfstop.ini
+++ b/language/fr-FR/fr-FR.plg_system_bfstop.ini
@@ -1,4 +1,4 @@
-; Traduit pour la version 0.9.11 par Flying_Lolo - 09/06/2013
+; Traduit pour la version 1.1.0 par Flying_Lolo - 30/11/2013
 ; Encodage UTF-8 - No BOM
 ; Fichier de traduction pour ./plugins/system/
 
@@ -8,9 +8,9 @@ IPADDRESS="Addresse IP"
 ERROR="Erreur"
 DATETIME="Date et heure"
 ORIGIN="Origine"
-BLOCKED_IP_ADDRESS_BODY="%2$s: Addresse IP %1$s bloquée pour cause de multiples tentatives de connexion sur un court laps de temps. Les tentatives sont les suivantes:\n\n%3$s"
+BLOCKED_IP_ADDRESS_BODY="%2$s: Addresse IP %1$s bloquée pour cause de multiples tentatives de connexion sur un court laps de temps. Les tentatives enregistrées à cette adresse sont les suivantes:\n\n%3$s\n\nRemarque: D'autres tentatives de connexions, plus anciennes, ont néanmoins pu également concourir à ce blocage, telles des tentatives de connexion ayant conduit à des blocages temporaires..."
 BLOCKED_IP_ADDRESS_SUBJECT="%s: Addresse IP bloquée %s"
 BLOCKED_IP_MESSAGE="En raison de multiples tentatives de connexion, rapprochées dans le temps, votre adresse IP a été bloquée."
 X_ATTEMPTS_LEFT="Il vous reste %d tentative(s) avant que votre adresse IP ne soit bloquée."
 BLOCKED_SUBJECT="%s: Enregistrement de multiples tentatives de connexion."
-BLOCKED_BODY="Bonjour!\n\nPlusieurs tentatives de connexion ont été enregistrées sur le site avec votre identifiant d'utilisateur '%s', mais avec un mauvais mot de passe.\nCes tentatives ont été suffisament nombreuses pour déclencher le blocage automatique de l'adresse IP à l'origine de ces tentatives.\n\nDans l'hypothèse où vous ne seriez pas à l'origine de ces tentatives de connexion, vous pouvez ignorer ce message. En effet, vous devriez pouvoir vous connecter sur le site dans les conditions habituelles.\nDans le cas contraire, et que vous vous souvenez désormais de votre mot de passe ou que vous souhaitez le réinitialiser sur le site, vous avez la possibilité de débloquer votre adresse IP en cliquant sur ce lien:\n%s\n\nCordialement, l'administration du site.\n\nNote: ceci est un message transmis par un automate."
+BLOCKED_BODY="Bonjour,\n\nPlusieurs tentatives de connexion ont été enregistrées sur le site %s avec votre identifiant d'utilisateur, mais avec un mauvais mot de passe.\nCes tentatives ont été suffisament nombreuses pour déclencher le blocage automatique de l'adresse IP à l'origine de ces tentatives.\n\nDans l'hypothèse où vous ne seriez pas à l'origine de ces tentatives de connexion, vous pouvez ignorer ce message. En effet, vous devriez pouvoir vous connecter sur le site dans les conditions habituelles.\n\nDans le cas contraire, et que vous vous souvenez désormais de votre mot de passe ou que vous souhaitez le réinitialiser sur le site, vous avez la possibilité de débloquer votre adresse IP en cliquant sur ce lien:\n%s\n\nCordialement,\n L'Administration du site.\n\nNote: ceci est un message transmis par un automate."
