--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,13 @@
+1.1.0 (2013-12-04)
+  - Adds it-IT translations - thanks to Stefano Buscaglia!
+  - Updated translations (ca-ES, nl-NL, fr-FR) - thanks to maintainers!
+  - whitelist (manageable via backend)
+  - adaptive delay
+  - option for automatic pruning of old failed log entries
+  - link to whois information for failed&blocked IP addresses in backend
+  - use more reliable method to determine clients' IP address
+  - some other small fixes
+
 1.0.0 (2013-08-18)
   - fix error when php compiled without openssl, using mcrypt or mt_rand instead
   - only create unblock token if mail really sent out
