Updates nl-NL language

--- a/language/nl-NL/nl-NL.plg_system_bfstop.ini
+++ b/language/nl-NL/nl-NL.plg_system_bfstop.ini
@@ -4,7 +4,7 @@ IPADDRESS="IP-Addres"
 ERROR="Fout"
 DATETIME="Datum en tijd"
 ORIGIN="Oorsprong"
-BLOCKED_IP_ADDRESS_BODY="%2$s: IP Address %1$s geblokkeerd omdat er te veel mislukte inlogpogingen in een korte tijd zijn geweest. Dit zijn de pogingen:\n\n%3$s"
+BLOCKED_IP_ADDRESS_BODY="%2$s: IP Address %1$s geblokkeerd omdat er te veel mislukte inlogpogingen in een korte tijd zijn geweest. Dit zijn alle inlogpogingen die vanaf dit adres zijn geregistreerd:\n\n%3$s\n\nLet op: Dit overzicht kan uit meer pogingen bestaan dan die recent voor een blokkade hebben gezorgd. Er kunnen namelijk pogingen in het verleden geweest zijn die toen al tot een tijdelijke blokkade hebben geleid, of pogingen die toen qua tijd te ver uit elkaar lagen maar nu wel relevant zijn!"
 BLOCKED_IP_ADDRESS_SUBJECT="%s: Geblokkeerd IP adres %s"
 BLOCKED_IP_MESSAGE="Uw IP-adres is geblokkeerd omdat er te veel mislukte inlogpogingen in een korte tijd geweest zijn."
 X_ATTEMPTS_LEFT="U heeft %d poging(en) over voordat uw IP adres geblokkeerd wordt."
