--- a/language/nl-NL/nl-NL.plg_system_bfstop.sys.ini
+++ b/language/nl-NL/nl-NL.plg_system_bfstop.sys.ini
@@ -13,7 +13,7 @@ NOTIFY_FAILED_NUMBER_DESC="Hoe vaak informeren over mislukte aanmeldingen tijden
 NOTIFY_BLOCKED_NUMBER_LABEL="Aantal berichten over geblokkeerde IP adressen per dag"
 NOTIFY_BLOCKED_NUMBER_DESC="Hoe vaak informeren over geblokkeerde IP adressen gedurende 1 dag."
 DELAY_DURATION_LABEL="Vertraging"
-DELAY_DURATION_DESC="Vertraging (in seconden) op een mislukte login poging."
+DELAY_DURATION_DESC="Vertraging (in seconden) na een mislukte aanlogpoging."
 LOGLEVEL_LABEL="Logging"
 LOGLEVEL_DESC="Hiermee bepaalt u of een Logfile over de activiteiten van de plugin moet worden gemaakt (Dit is alleen nodig in geval van een probleem; het logbestand kan worden gevonden in de logs directory onder de naam plg_system_bfstop.log.php)."
 BLOCK_NUMBER_LABEL="Max aantal foutieve pogingen"
@@ -45,13 +45,24 @@ BLOCK_4HOURS="4 uur"
 BLOCK_8HOURS="8 uur"
 BLOCK_24HOURS="1 dag"
 MAX_BLOCKS_BEFORE_LABEL="Permanent blokkeren na"
-MAX_BLOCKS_BEFORE_DESC="Bepaald na hoeveel blokkades een IP adres een permanente blokkade moet worden toegekend."
+MAX_BLOCKS_BEFORE_DESC="Bepaalt na hoeveel blokkades een IP adres een permanente blokkade moet worden toegekend."
 MAX_BLOCK_NEVER="Nooit"
 ENABLED_FOR_ORIGIN_LABEL="Activeer detectie voor"
-ENABLED_FOR_ORIGIN_DESC="Bepaald voor welke delen van de site deze plugin actief moet zijn. Als alleen frontend of alleen backend wordt gekozen, dan zal een foutieve aanlogpoging in de back-end NIET gereset worden door een goede aanlogpoging in de frond-end en omgekeerd. Let wel: Als er een blokkade ontstaat is deze wel voor de HELE site. Dus zowel de frond-end als de back-end!"
+ENABLED_FOR_ORIGIN_DESC="Bepaalt voor welke delen van de site deze plugin actief moet zijn. Als alleen frontend of alleen backend wordt gekozen, dan zal een foutieve aanlogpoging in de back-end NIET gereset worden door een goede aanlogpoging in de frond-end en omgekeerd. Let wel: Als er een blokkade ontstaat is deze wel voor de HELE site. Dus zowel de frond-end als de back-end!"
 ENABLED_FOR_FRONTEND="alleen de front-end"
 ENABLED_FOR_BACKEND="alleen de back-end"
 ENABLED_FOR_BOTH="zowel de front-end als back-end"
 FATAL="Fatale fouten"
 INFO="Informatieve meldingen"
 DEBUG="Gedetailleerde meldingen"
+DELETE_OLD_ENTRIES_LABEL="Verwijder oude foutieve aanlogpogingen na (weken)"
+DELETE_OLD_ENTRIES_DESC="Verwijder foutieve aanlogpogingen ouder dan het aantal weken dat wordt ingegeven in dit veld (gebruik waarde 0 om nooit op te schonen)."
+ADAPTIVE_DELAY_LABEL="Zelflerende vertraging"
+ADAPTIVE_DELAY_DESC="Activeer de zelflerende vertraging zodat deze zich aanpast aan het actuele aantal foutieve aanlogpogingen. De vertraging tussen de logins wordt dan dynamisch in tijd verhoogd als tegenmaatregel tegen bijvoorbeeld een gedistribueerde aanval op uw website."
+ADAPTIVE_DELAY_MAX_LABEL="Maximale vertragingsduur (seconden)"
+ADAPTIVE_DELAY_MAX_DESC="De maximale vertraging (in seconden) die u wilt toestaan. De vertraging wordt dynamisch naar dit maximum opgebouwd afhankelijk van het aantal mislukte aanlogpoging."
+ADAPTIVE_DELAY_THRSH_MIN_LABEL="Start extra vertraging bij"
+ADAPTIVE_DELAY_THRSH_MIN_DESC="De ondergrens (in aantal foutieve aanlogpogingen over laatste uur) voordat de extra vertraging wordt geactiveerd."
+ADAPTIVE_DELAY_THRSH_MAX_LABEL="Stop extra vertraging bij"
+ADAPTIVE_DELAY_THRSH_MAX_DESC="De bovengrens (in aantal foutieve aanlogpogingen over laatste uur) waarboven geen extra vertraging meer wordt toegepast."
+DELAY_FIELDSET_LABEL="Vertraging"
