--- a/language/en-GB/en-GB.plg_system_bfstop.sys.ini
+++ b/language/en-GB/en-GB.plg_system_bfstop.sys.ini
@@ -58,7 +58,7 @@ DEBUG="Detailed information"
 DELETE_OLD_ENTRIES_LABEL="Delete old entries"
 DELETE_OLD_ENTRIES_DESC="Delete entries older than the number of weeks given in this field (set to 0 to disable deletion of old entries)."
 ADAPTIVE_DELAY_LABEL="Adaptive Delay"
-ADAPTIVE_DELAY_DESC="Activate to adapt delay to the current rate of failed delays. Will increase the delay whenever there is an increased number of logins as a countermeasure for distributed attacks."
+ADAPTIVE_DELAY_DESC="Activate to adapt delay to the current rate of failed login attempts. Will increase the delay whenever there is an increased number of logins as a countermeasure for distributed attacks."
 ADAPTIVE_DELAY_MAX_LABEL="Maximum delay"
 ADAPTIVE_DELAY_MAX_DESC="The maximum delay for the response on failed login attempts when adaptive delay is turned on"
 ADAPTIVE_DELAY_THRSH_MIN_LABEL="Minimum threshold"
