en-GB language update inspired by Rob van Baal

--- a/language/en-GB/en-GB.plg_system_bfstop.sys.ini
+++ b/language/en-GB/en-GB.plg_system_bfstop.sys.ini
@@ -55,8 +55,8 @@ ENABLED_FOR_BOTH="Frontend and Backend"
 FATAL="Fatal error"
 INFO="Informational message"
 DEBUG="Detailed information"
-DELETE_OLD_ENTRIES_LABEL="Delete old entries"
-DELETE_OLD_ENTRIES_DESC="Delete entries older than the number of weeks given in this field (set to 0 to disable deletion of old entries)."
+DELETE_OLD_ENTRIES_LABEL="Prune old attempts"
+DELETE_OLD_ENTRIES_DESC="Delete failed login attempts older than the number of weeks given in this field (set to 0 to disable deletion of old entries)."
 ADAPTIVE_DELAY_LABEL="Adaptive Delay"
 ADAPTIVE_DELAY_DESC="Activate to adapt delay to the current rate of failed login attempts. Will increase the delay whenever there is an increased number of logins as a countermeasure for distributed attacks."
 ADAPTIVE_DELAY_MAX_LABEL="Maximum delay"
