language update as suggested by Rob van Baal

--- a/language/it-IT/it-IT.plg_system_bfstop.ini
+++ b/language/it-IT/it-IT.plg_system_bfstop.ini
@@ -4,7 +4,7 @@ IPADDRESS="Indirizzo-IP"
 ERROR="Errore"
 DATETIME="Data e ora"
 ORIGIN="Origine"
-BLOCKED_IP_ADDRESS_BODY="Indirizzo IP Bloccato %1$s perché ci sono stati troppi tentativi di accesso non riusciti in breve tempo su %2$s. Questi sono i tentativi:\n\n%3$s"
+BLOCKED_IP_ADDRESS_BODY="Indirizzo IP Bloccato %1$s perché ci sono stati troppi tentativi di accesso non riusciti in breve tempo su %2$s. Questi sono i tentativi:\n\n%3$s\n\nNota: Questo elenco può contenere più voci rispetto a quelle che hanno causano il blocco attuale. L'elenco può contenere tentativi nel passato che hanno causato già un blocco temporaneo, o tentativi che erano troppo distanti per causare un blocco diretto."
 BLOCKED_IP_ADDRESS_SUBJECT="%s: Indirizzo IP Bloccato %s"
 BLOCKED_IP_MESSAGE="Il tuo indirizzo IP è stato bloccato perché ci sono stati troppi tentativi di accesso non riusciti in breve tempo."
 X_ATTEMPTS_LEFT="Hai ancora %d tentativo(i) prima che il tuo indirizzo IP venga bloccato"
