language update as suggested by Rob van Baal
language update as suggested by Rob van Baal for 
it-IT.plg_system_bfstop.sys.ini

--- a/language/it-IT/it-IT.plg_system_bfstop.sys.ini
+++ b/language/it-IT/it-IT.plg_system_bfstop.sys.ini
@@ -55,8 +55,8 @@ ENABLED_FOR_BOTH="Frontend e Backend"
 FATAL="Errore Irreversibile"
 INFO="Messaggio infomrativo"
 DEBUG="Informazioni dettagliate"
-DELETE_OLD_ENTRIES_LABEL="Eliminare i vecchi dati"
-DELETE_OLD_ENTRIES_DESC="Eliminare i dati più vecchi del numero di settimane fornito in questo campo (impostate a 0 per disabilitare l'eliminazione dei dati vecchi)
+DELETE_OLD_ENTRIES_LABEL="Rimuovere i vecchi tentativi"
+DELETE_OLD_ENTRIES_DESC="Elimina i tentativi di Login falliti più vecchi del numero di settimane fornite in questo campo (impostato a 0 disabilita l'eliminazione delle vecchie voci)."
 ADAPTIVE_DELAY_LABEL="Ritardo adattivo"
 ADAPTIVE_DELAY_DESC="Attiva per adattare il ritardo all'attuale tasso di accessi falliti. Aumenterà il ritardo ogni volta che c'è un aumento del numero di accessi come contromisura per gli attacchi distribuiti."
 ADAPTIVE_DELAY_MAX_LABEL="Ritardo massimo"
