Fix #55: More block durations (1 week, 30days)

--- a/language/en-GB/en-GB.plg_system_bfstop.sys.ini
+++ b/language/en-GB/en-GB.plg_system_bfstop.sys.ini
@@ -44,6 +44,8 @@ BLOCK_2HOURS="2 Hours"
 BLOCK_4HOURS="4 Hours"
 BLOCK_8HOURS="8 Hours"
 BLOCK_24HOURS="1 Day"
+BLOCK_1WEEK="1 Week"
+BLOCK_30DAYS="30 Days"
 MAX_BLOCKS_BEFORE_LABEL="Permanent after"
 MAX_BLOCKS_BEFORE_DESC="Determines after how many blocked attempts a permanent block will be set up. Blocks which were removed (i.e. unblocked) by token do also count; only those done via the backend will be ignored."
 MAX_BLOCK_NEVER="Never"
