--- a/language/de-DE/de-DE.plg_system_bfstop.sys.ini
+++ b/language/de-DE/de-DE.plg_system_bfstop.sys.ini
@@ -44,6 +44,8 @@ BLOCK_2HOURS="2 Stunden"
 BLOCK_4HOURS="4 Stunden"
 BLOCK_8HOURS="8 Stunden"
 BLOCK_24HOURS="1 Tag"
+BLOCK_1WEEK="1 Woche"
+BLOCK_30DAYS="30 Tage"
 MAX_BLOCKS_BEFORE_LABEL="Permanent nach"
 MAX_BLOCKS_BEFORE_DESC="Bestimmt nach wie vielen Sperren eine permanente Sperre einer IP-Adresse eingerichtet wird. Zur Bestimmung der Anzahl vorheriger Sperren werden auch solche wiederaufgehobenen Sperren hinzugezählt, die der Benutzer selbst wiederaufgehoben hat; nur per Backend aufgehobene Sperren werden ignoriert"
 MAX_BLOCK_NEVER="Niemals"
