Fix #55: More block durations (1 week, 30days)

--- a/language/it-IT/it-IT.plg_system_bfstop.sys.ini
+++ b/language/it-IT/it-IT.plg_system_bfstop.sys.ini
@@ -44,6 +44,8 @@ BLOCK_2HOURS="2 Ore"
 BLOCK_4HOURS="4 Ore"
 BLOCK_8HOURS="8 Ore"
 BLOCK_24HOURS="1 Giorno"
+BLOCK_1WEEK="1 Settimana"
+BLOCK_30DAYS="30 Giorni"
 MAX_BLOCKS_BEFORE_LABEL="Permanente dopo"
 MAX_BLOCKS_BEFORE_DESC="Determina dopo quanti tentativi bloccati sarà attivato un blocco permanente. Si contano anche i blocchi che sono stati rimossi (cioè sbloccati) con il condice-token; solo gli sblocchi fatti tramite il backend verranno ignorati."
 MAX_BLOCK_NEVER="Mai"
