Fix #53: Multiple notification recipients

--- a/language/en-GB/en-GB.plg_system_bfstop.sys.ini
+++ b/language/en-GB/en-GB.plg_system_bfstop.sys.ini
@@ -2,12 +2,10 @@ PLG_SYSTEM_BFSTOP="System - Brute Force Stop"
 PLG_BFSTOP_DESC="<h2>Brute Force Stop</h2><div>This plugin provides means to avert Brute-Force-Attacks on your Joomla-Installation. For this purpose, the plugin stores information on failed login attempts, so that when reaching a configurable number of such failed login attempts the attacker's IP address can be blocked. Furthermore, you can configure notifications about failed logins and blocked IP addresses, as well as a variable delay for a failed login attempt.</div><br /><div><em>Don't forget to configure and publish the plugin after installation!</em><br />If you have any questions on the plugin, please visit the <a href='https://github.com/codeling/bfstop'>project site on github</a>. Should there be any problems when using the plugin, don't hesitate to report them in the <a href='https://github.com/codeling/bfstop/issues'>issue tracker</a>!</div><br /><div>In some parts, this plugin was inspired by the following plugins: Login Failed Log, Redirect Failed Logins and Ban IP Address/Range. Thanks very much for the authors of these plugins!<br />Brute Force Stop is a <a target='_blank' href='http://www.joomla.org/'>Joomla!</a> Plugin, published under the <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>.</div>"
 BLOCK_ENABLED_LABEL="Enable Blocking"
 BLOCK_ENABLED_DESC="Whether this plugin should block IP addresses. When disabled, no new IP addresses will be added to the list of blocked addresses, and not even IP addresses already on that list will be blocked anymore (the list itself will be preserved, though)."
-EMAIL_SOURCE_LABEL="Email Source"
-EMAIL_SOURCE_DESC="Choose where the email address to send notifications to should come from"
 USERID_LABEL="Select a User"
 USERID_DESC="Select the user you would like to have notifications to be sent."
-EMAIL_ADDRESS_LABEL="Email Address"
-EMAIL_ADDRESS_DESC="Enter the Email Address where you would like to have notifications to be sent."
+EMAIL_ADDRESS_LABEL="Email Address(es)"
+EMAIL_ADDRESS_DESC="Enter the Email Address(es) where you would like to have notifications to be sent. If you want to specify more than one address, separate them by the semicolon character (;)."
 NOTIFY_FAILED_NUMBER_LABEL="Failed msgs per day"
 NOTIFY_FAILED_NUMBER_DESC="How often to notify about a failed login during one day"
 NOTIFY_BLOCKED_NUMBER_LABEL="Blocked msgs per day"
@@ -28,8 +26,6 @@ NOTIFY_BLOCKED_USER_LABEL="User Block Message"
 NOTIFY_BLOCKED_USER_DESC="When turned on, in case of a blocked IP address, a notification will be sent to the user which tried to log in (only of course in case it is an existing username)."
 USE_HTTP_ERROR_LABEL="Use HTTP Error"
 USE_HTTP_ERROR_DESC="If enabled, bfstop will send a status code 403 (Forbidden) if the users' IP address is blocked"
-SELECTEDUSERS="Selected User"
-CUSTOMEMAILADDRESS="Custom Email Address"
 ENABLED="enabled"
 DISABLED="disabled"
 NOTIFY_UNLIMITED="unlimited"
@@ -68,3 +64,8 @@ ADAPTIVE_DELAY_THRSH_MIN_DESC="The threshold at which the adaptive delay starts 
 ADAPTIVE_DELAY_THRSH_MAX_LABEL="Maximum threshold"
 ADAPTIVE_DELAY_THRSH_MAX_DESC="The threshold at which the adaptive delay reaches the maximum delay (measured in number of failed logins in the last hour)"
 DELAY_FIELDSET_LABEL="Delay"
+NOTIFICATION_FIELDSET_LABEL="Notification"
+GROUP_NOTIFICATION_ENABLED_LABEL="User group notification"
+GROUP_NOTIFICATION_ENABLED_DESC="If enabled, the whole user group selected below will be notified in case of failed logins/banned IPs"
+USERGROUP_LABEL="User group"
+USERGROUP_DESC="Choose a user group from which to notify every member about failed logins and banned IPs (if activated above). Probably you will want to create a dedicated group for this, or use a group which holds only your most experienced administrators, like the default 'Super Users' group."
