--- a/language/de-DE/de-DE.plg_system_bfstop.sys.ini
+++ b/language/de-DE/de-DE.plg_system_bfstop.sys.ini
@@ -2,12 +2,10 @@ PLG_SYSTEM_BFSTOP="System - Brute Force Stop"
 PLG_BFSTOP_DESC="<h2>Brute Force Stop</h2><div>Dieses Plugin dient der Abwehr von Brute-Force-Attacken auf Ihre Joomla-Installation. Zu diesem Zweck wird ein Log über fehlgeschlagene Login-Versuche in Ihrem Front- und Backend erstellt, und bei Erreichen einer konfigurierbaren Anzahl solcher fehlgeschlagener Versuche wird die IP-Adresse, von der diese Versuche kommen, gesperrt. Weiters lassen sich Benachrichtigungen über fehlgeschlagene Login-Versuche sowie über geblockte IP-Adressen konfigurieren. Weiters kann man vor der Antwort auf fehlgeschlagene Login-Versuche eine einstellbare Verzögerung konfigurieren.</div><br /><div><em>Nicht vergessen, das Plugin nach der Installation zu konfigurieren und freizugeben!</em><br />Bei Fragen zum Plugin besuchen Sie bitte die <a href='https://github.com/codeling/bfstop'>Projektseite auf github</a>. Sollten bei der Verwendung Probleme auftreten, zögern Sie nicht, diese im <a href='https://github.com/codeling/bfstop/issues'>issue tracker</a> zu melden!</div><br /><div>Teilweise wurde die Funktionalität durch die folgenden Plugins inspiriert: Login Failed Log, Redirect Failed Logins and Ban IP Address/Range. Mein Dank geht an die Autoren dieser Plugins!<br /><em>Brute Force Stop</em> ist ein <a target='_blank' href='http://www.joomla.org/'>Joomla!</a> Plugin, veröffentlicht unter der <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>.</div>"
 BLOCK_ENABLED_LABEL="Blockierung"
 BLOCK_ENABLED_DESC="Bestimmt ob das Plugin IP-Adressen blockieren soll. Wenn deaktiviert, werden keine neuen Sperren mehr angelegt, und auch bereits eingetragene Sperren ignoriert (obgleich diese erhalten bleiben)."
-EMAIL_SOURCE_LABEL="Email-Adress-Quelle"
-EMAIL_SOURCE_DESC="Bitte wählen Sie wie die Ziel-Email-Adresse ermittelt werden soll"
 USERID_LABEL="Benutzer wählen"
 USERID_DESC="Den Benutzer auswählen, an dessen Email-Adresse die Benachrichtigungen gesendet werden sollen."
-EMAIL_ADDRESS_LABEL="Email-Adresse"
-EMAIL_ADDRESS_DESC="Die Email-Adresse eingeben, an die die Benachrichtigungen gesendet werden sollen."
+EMAIL_ADDRESS_LABEL="Email-Adresse(n)"
+EMAIL_ADDRESS_DESC="Die Email-Adresse(n) eingeben, an die die Benachrichtigungen gesendet werden sollen. Wenn mehrere Adressen eingegeben werden, müssen diese durch einen Strichpunkt (;) getrennt werden."
 NOTIFY_FAILED_NUMBER_LABEL="Fehlgeschlagen-Nachrichten"
 NOTIFY_FAILED_NUMBER_DESC="Wie oft an einem Tag maximal eine Benachrichtigung über fehlgeschlagene Login-Versuche gesendet werden soll."
 NOTIFY_BLOCKED_NUMBER_LABEL="Blockiert-Nachrichten"
@@ -28,8 +26,6 @@ NOTIFY_BLOCKED_USER_LABEL="Benutzer-Block-Nachricht"
 NOTIFY_BLOCKED_USER_DESC="Wenn eingeschaltet, wird an die in der Datenbank hinterlegte Email-Adresse eine Nachricht hinterlegt, wenn eine IP-Adresse gesperrt wird (sofern der Benutzername, mit dem das Login versucht wurde, ein existierender war)"
 USE_HTTP_ERROR_LABEL="Verwende HTTP-Fehler"
 USE_HTTP_ERROR_DESC="Wenn aktiviert, wird der HTTP Statuscode 403 (Forbidden) gesendet wenn die IP-Addresse eines Benutzers gesperrt ist."
-SELECTEDUSERS="Gewählter Benutzer"
-CUSTOMEMAILADDRESS="Benutzerdefinierte Email-Adresse"
 ENABLED="aktiviert"
 DISABLED="deaktiviert"
 NOTIFY_UNLIMITED="unbegrenzt"
@@ -68,3 +64,8 @@ ADAPTIVE_DELAY_THRSH_MIN_DESC="Die untere Schwelle ab der die adaptive Verzöger
 ADAPTIVE_DELAY_THRSH_MAX_LABEL="Obere Schwelle"
 ADAPTIVE_DELAY_THRSH_MAX_DESC="Die Schwelle ab der die adaptive Verzögerung die maximale Verzögerung erreichen soll (gemessen in fehlgeschlagenen Logins in der letzten Stunde)"
 DELAY_FIELDSET_LABEL="Verzögerung"
+NOTIFICATION_FIELDSET_LABEL="Benachrichtigung"
+GROUP_NOTIFICATION_ENABLED_LABEL="Benutzergruppen-Nachricht"
+GROUP_NOTIFICATION_ENABLED_DESC="Wenn aktiviert, werden Benachrichtigungen an alle Benutzer gesendet, die Mitglied der unten ausgewählten Gruppe sind."
+USERGROUP_LABEL="Benutzergruppe"
+USERGROUP_DESC="Diejenige Benutzergruppe, an deren Mitglieder Benachrichtigungen über fehlgeschlagene Logins und geblockte IPs gesendet werden (falls oben aktiviert). Gewöhnlich sollte hierfür eine dedizierte Gruppe geschaffen werden, oder eine Gruppe die nur die erfahrensten Administratoren enthält, etwa die 'Super User' Gruppe."
