--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+1.2.0beta1 (2013-12-31)
+  - IP subnet range support for whitelisting&blocking
+  - Multiple notification recipients (no more awkward choice between which input to consider for email addresses - all inputs where something is specified are taken into consideration; multiple email addresses can be specified separated by a semicolon; and a user group can be chosen to be notified)
+  - Several fixes (language, whitelist/ block list editing)
+
 1.1.1 (2013-12-05)
   - Fix installation SQL error
   - Correctly update package instead of component and plugin separately
