Updates fr-FR language to 1.2.0

--- a/language/fr-FR/fr-FR.plg_system_bfstop.sys.ini
+++ b/language/fr-FR/fr-FR.plg_system_bfstop.sys.ini
@@ -1,4 +1,4 @@
-; Traduit pour la version 1.1.0 par Flying_Lolo - 30/11/2013
+; Traduit pour la version 1.2.0 par Flying_Lolo - 01/01/2014
 ; Encodage UTF-8 - No BOM
 ; Fichier de traduction pour ./plugins/system/bfstop/language/fr-FR/
 
@@ -8,8 +8,8 @@ BLOCK_ENABLED_LABEL="Activation du blocage"
 BLOCK_ENABLED_DESC="Active le blocage des adresses IP. En cas de désactivation, aucune nouvelle adresse IP ne sera ajoutée à la liste des adresses bloquées. Même les adresses IP déjà listées ne seront pas bloquées, mais la liste elle-même sera conservée."
 USERID_LABEL="Sélection de l'utilisateur"
 USERID_DESC="Utilisateur dont l'adresse électronique est utilisée en tant qu'adresse destinataire des courriels de notification (sous réserve que l'adresse de notification ci-dessus soit configurée en mode 'Utilisateur sélectionné')."
-EMAIL_ADDRESS_LABEL="Courriel personnalisé"
-EMAIL_ADDRESS_DESC="Adresse électronique personnalisée utilisée en tant qu'adresse destinataire des courriels de notification (sous réserve que l'adresse de notification ci-dessus soit configurée en mode 'Courriel personnalisé')."
+EMAIL_ADDRESS_LABEL="Adresse(s) électronique(s)"
+EMAIL_ADDRESS_DESC="Adresse(s) électronique(s) utilisée(s) en tant qu'adresse(s) destinataire(s) des courriels de notification. Pour spécifier plusieurs adresses, utiliser le séparateur ';'."
 NOTIFY_FAILED_NUMBER_LABEL="Notification des échecs de connexion (msg/j)"
 NOTIFY_FAILED_NUMBER_DESC="Combien d'échecs de connexion au maximum notifier par jour ?"
 NOTIFY_BLOCKED_NUMBER_LABEL="Notification des blocages d'adresses IP (msg/j)"
@@ -54,7 +54,7 @@ ENABLED_FOR_BOTH="Frontal ET Administration"
 FATAL="Erreur fatale"
 INFO="Message d'information"
 DEBUG="Information détaillée"
-; Ajouté à compter de la version 1.0.0 Beta
+; Ajouté à compter de la version 1.0.0
 USE_HTTP_ERROR_LABEL="Utiliser les codes erreur HTTP"
 USE_HTTP_ERROR_DESC="Si cette option est activée, bfstop enverra un code erreur 403 (accès interdit) à l'utilisateur d'une adresse IP bloquée"
 ; Ajouté à compter de la version 1.1.0
@@ -69,3 +69,11 @@ ADAPTIVE_DELAY_THRSH_MIN_DESC="Le seuil à partir duquel le délai adaptatif ent
 ADAPTIVE_DELAY_THRSH_MAX_LABEL="Seuil maximal"
 ADAPTIVE_DELAY_THRSH_MAX_DESC="Le seuil à partir duquel le délai adaptatif est maximal (mesuré à travers le nombre de connexions échouées dans la dernière heure)"
 DELAY_FIELDSET_LABEL="Délai"
+; Ajouté à compter de la version 1.2.0
+BLOCK_1WEEK="1 semaine"
+BLOCK_30DAYS="30 jours"
+NOTIFICATION_FIELDSET_LABEL="Notification"
+GROUP_NOTIFICATION_ENABLED_LABEL="Notification du groupe d'utilisateurs"
+GROUP_NOTIFICATION_ENABLED_DESC="En cas d'activation, la totalité des utilisateurs du groupe d'utilisateurs sélectionné ci-dessous sera informée des échecs de connexion / banissements d'adresses IP"
+USERGROUP_LABEL="Groupe d'utilisateurs"
+USERGROUP_DESC="Indiquer le groupe d'utilisateurs à informer des échecs de connexion / banissements d'adresses IP. Cela suppose l'existence dans Joomla d'un groupe d'utilisateurs adapté à cet usage (par exemple, le  groupe 'Super Users')."
