--- a/language/nl-NL/nl-NL.plg_system_bfstop.sys.ini
+++ b/language/nl-NL/nl-NL.plg_system_bfstop.sys.ini
@@ -4,8 +4,8 @@ BLOCK_ENABLED_LABEL="IP adres blokkering"
 BLOCK_ENABLED_DESC="Of deze plugin blokkeren van IP-adressen moet toepassen. Wanneer uitgeschakeld, zullen geen nieuwe IP-adressen aan de lijst met geblokkeerde adressen worden toegevoegd, en zelfs IP-adressen al op die lijst zullen niet meer worden geblokkeerd (de lijst zelf zal worden bewaard)."
 USERID_LABEL="Selecteer een gebruiker"
 USERID_DESC="Selecteer de gebruiker aan wie meldingen moeten worden verzonden."
-EMAIL_ADDRESS_LABEL="Zelf gekozen email adres"
-EMAIL_ADDRESS_DESC="Voer het e-mailadres in waar meldingen naartoe moeten worden verzonden."
+EMAIL_ADDRESS_LABEL="Zelf gekozen email adres(sen)"
+EMAIL_ADDRESS_DESC="Voer het e-mailadres in waar meldingen naartoe moeten worden verzonden. U kunt ook meerdere e-mailadressen opgeven. Scheid deze dan met een punt-komma teken (;)."
 NOTIFY_FAILED_NUMBER_LABEL="Aantal berichten over mislukte aanlogpogingen per dag"
 NOTIFY_FAILED_NUMBER_DESC="Hoe vaak informeren over mislukte aanmeldingen tijdens 1 dag"
 NOTIFY_BLOCKED_NUMBER_LABEL="Aantal berichten over geblokkeerde IP adressen per dag"
