Show hint to use reset password function (fix #69)

--- a/language/de-DE/de-DE.plg_system_bfstop.sys.ini
+++ b/language/de-DE/de-DE.plg_system_bfstop.sys.ini
@@ -69,3 +69,8 @@ GROUP_NOTIFICATION_ENABLED_LABEL="Benutzergruppen-Nachricht"
 GROUP_NOTIFICATION_ENABLED_DESC="Wenn aktiviert, werden Benachrichtigungen an alle Benutzer gesendet, die Mitglied der unten ausgewählten Gruppe sind."
 USERGROUP_LABEL="Benutzergruppe"
 USERGROUP_DESC="Diejenige Benutzergruppe, an deren Mitglieder Benachrichtigungen über fehlgeschlagene Logins und geblockte IPs gesendet werden (falls oben aktiviert). Gewöhnlich sollte hierfür eine dedizierte Gruppe geschaffen werden, oder eine Gruppe die nur die erfahrensten Administratoren enthält, etwa die 'Super User' Gruppe."
+NOTIFY_USE_PASSWORD_REMINDER_LABEL="Passwort Reset Nachricht"
+NOTIFY_USE_PASSWORD_REMINDER_DESC="Ob und wann bei fehlgeschlagenen Logins eine Benachrichtigung darüber angezeigt werden soll, die Funktionalität zum Zurücksetzen des Passworts zu benutzen."
+REMINDER_NOTIFY_ALWAYS="Immer anzeigen"
+REMINDER_NOTIFY_1LEFT="Wenn 1 Versuch übrig"
+REMINDER_NOTIFY_2LEFT="Wenn 2 Versuche übrig"
