--- a/language/en-GB/en-GB.plg_system_bfstop.sys.ini
+++ b/language/en-GB/en-GB.plg_system_bfstop.sys.ini
@@ -69,3 +69,8 @@ GROUP_NOTIFICATION_ENABLED_LABEL="User group notification"
 GROUP_NOTIFICATION_ENABLED_DESC="If enabled, the whole user group selected below will be notified in case of failed logins/banned IPs"
 USERGROUP_LABEL="User group"
 USERGROUP_DESC="Choose a user group from which to notify every member about failed logins and banned IPs (if activated above). Probably you will want to create a dedicated group for this, or use a group which holds only your most experienced administrators, like the default 'Super Users' group."
+NOTIFY_USE_PASSWORD_REMINDER_LABEL="Password reset reminder"
+NOTIFY_USE_PASSWORD_REMINDER_DESC="Whether and when to show a reminder about using the password reminder functionality on a failed login"
+REMINDER_NOTIFY_ALWAYS="Always"
+REMINDER_NOTIFY_1LEFT="When 1 attempt left"
+REMINDER_NOTIFY_2LEFT="When 2 attempts left"
