Allow to show IP address on block (fix #73)

--- a/language/de-DE/de-DE.plg_system_bfstop.sys.ini
+++ b/language/de-DE/de-DE.plg_system_bfstop.sys.ini
@@ -74,3 +74,5 @@ NOTIFY_USE_PASSWORD_REMINDER_DESC="Ob und wann bei fehlgeschlagenen Logins eine 
 REMINDER_NOTIFY_ALWAYS="Immer anzeigen"
 REMINDER_NOTIFY_1LEFT="Wenn 1 Versuch übrig"
 REMINDER_NOTIFY_2LEFT="Wenn 2 Versuche übrig"
+BLOCKED_MSG_SHOWIP_LABEL="IP zeigen"
+BLOCKED_MSG_SHOWIP_DESC="Zeige die IP Adresse des Benutzers (wie vom Server wahrgenommen) wenn blockiert"
