--- a/language/en-GB/en-GB.plg_system_bfstop.sys.ini
+++ b/language/en-GB/en-GB.plg_system_bfstop.sys.ini
@@ -74,3 +74,5 @@ NOTIFY_USE_PASSWORD_REMINDER_DESC="Whether and when to show a reminder about usi
 REMINDER_NOTIFY_ALWAYS="Always"
 REMINDER_NOTIFY_1LEFT="When 1 attempt left"
 REMINDER_NOTIFY_2LEFT="When 2 attempts left"
+BLOCKED_MSG_SHOWIP_LABEL="Show IP"
+BLOCKED_MSG_SHOWIP_DESC="When blocked, show the user his IP address (as perceived by the server)"
