Updates fr-FR language

--- a/language/fr-FR/fr-FR.plg_system_bfstop.ini
+++ b/language/fr-FR/fr-FR.plg_system_bfstop.ini
@@ -1,4 +1,4 @@
-; Traduit pour la version 1.1.0 par Flying_Lolo - 30/11/2013
+; Traduit pour la version 1.3.0B1 par Flying_Lolo - 16/03/2014
 ; Encodage UTF-8 - No BOM
 ; Fichier de traduction pour ./plugins/system/
 
@@ -14,3 +14,5 @@ BLOCKED_IP_MESSAGE="En raison de multiples tentatives de connexion, rapprochées
 X_ATTEMPTS_LEFT="Il vous reste %d tentative(s) avant que votre adresse IP ne soit bloquée."
 BLOCKED_SUBJECT="%s: Enregistrement de multiples tentatives de connexion."
 BLOCKED_BODY="Bonjour,\n\nPlusieurs tentatives de connexion ont été enregistrées sur le site %s avec votre identifiant d'utilisateur, mais avec un mauvais mot de passe.\nCes tentatives ont été suffisament nombreuses pour déclencher le blocage automatique de l'adresse IP à l'origine de ces tentatives.\n\nDans l'hypothèse où vous ne seriez pas à l'origine de ces tentatives de connexion, vous pouvez ignorer ce message. En effet, vous devriez pouvoir vous connecter sur le site dans les conditions habituelles.\n\nDans le cas contraire, et que vous vous souvenez désormais de votre mot de passe ou que vous souhaitez le réinitialiser sur le site, vous avez la possibilité de débloquer votre adresse IP en cliquant sur ce lien:\n%s\n\nCordialement,\n L'Administration du site.\n\nNote: ceci est un message transmis par un automate."
+PASSWORD_RESET_RECOMMENDED="Au moins une tentative de connexion a récemment échoué. En multipliant les essais infructeux, vous risquez d'être bientôt bloqués pour des raisons de sécurité. Raison pour laquelle nous vous recommandons de <a href="%1$s"> réinitialiser votre mot de passe</a>!"
+BLOCKED_CLIENT_IP="Votre address IP est: %s."
