--- a/language/fr-FR/fr-FR.plg_system_bfstop.sys.ini
+++ b/language/fr-FR/fr-FR.plg_system_bfstop.sys.ini
@@ -1,4 +1,4 @@
-; Traduit pour la version 1.2.0 par Flying_Lolo - 01/01/2014
+; Traduit pour la version 1.3.0B1 par Flying_Lolo - 16/03/2014
 ; Encodage UTF-8 - No BOM
 ; Fichier de traduction pour ./plugins/system/bfstop/language/fr-FR/
 
@@ -54,7 +54,7 @@ ENABLED_FOR_BOTH="Frontal ET Administration"
 FATAL="Erreur fatale"
 INFO="Message d'information"
 DEBUG="Information détaillée"
-; Ajouté à compter de la version 1.0.0
+; Ajouté à compter de la version 1.0.0 Beta
 USE_HTTP_ERROR_LABEL="Utiliser les codes erreur HTTP"
 USE_HTTP_ERROR_DESC="Si cette option est activée, bfstop enverra un code erreur 403 (accès interdit) à l'utilisateur d'une adresse IP bloquée"
 ; Ajouté à compter de la version 1.1.0
@@ -69,7 +69,7 @@ ADAPTIVE_DELAY_THRSH_MIN_DESC="Le seuil à partir duquel le délai adaptatif ent
 ADAPTIVE_DELAY_THRSH_MAX_LABEL="Seuil maximal"
 ADAPTIVE_DELAY_THRSH_MAX_DESC="Le seuil à partir duquel le délai adaptatif est maximal (mesuré à travers le nombre de connexions échouées dans la dernière heure)"
 DELAY_FIELDSET_LABEL="Délai"
-; Ajouté à compter de la version 1.2.0
+; Ajouté à compter de la version 1.2.0 Beta1
 BLOCK_1WEEK="1 semaine"
 BLOCK_30DAYS="30 jours"
 NOTIFICATION_FIELDSET_LABEL="Notification"
@@ -77,3 +77,11 @@ GROUP_NOTIFICATION_ENABLED_LABEL="Notification du groupe d'utilisateurs"
 GROUP_NOTIFICATION_ENABLED_DESC="En cas d'activation, la totalité des utilisateurs du groupe d'utilisateurs sélectionné ci-dessous sera informée des échecs de connexion / banissements d'adresses IP"
 USERGROUP_LABEL="Groupe d'utilisateurs"
 USERGROUP_DESC="Indiquer le groupe d'utilisateurs à informer des échecs de connexion / banissements d'adresses IP. Cela suppose l'existence dans Joomla d'un groupe d'utilisateurs adapté à cet usage (par exemple, le  groupe 'Super Users')."
+; Ajouté à compter de la version 1.3.0 Beta1
+NOTIFY_USE_PASSWORD_REMINDER_LABEL="Réinitialisation du mot de passe : aide-mémoire"
+NOTIFY_USE_PASSWORD_REMINDER_DESC="Opportunité et modalités de rappel de l'usage de la fonctionnalité de réinitialisation du mot de passe en cas d'échec de connexion"
+REMINDER_NOTIFY_ALWAYS="Toujours"
+REMINDER_NOTIFY_1LEFT="Après 1 échec de connexion"
+REMINDER_NOTIFY_2LEFT="Après 2 échecs de connexion"
+BLOCKED_MSG_SHOWIP_LABEL="Affichage IP"
+BLOCKED_MSG_SHOWIP_DESC="En cas de blocage, indique à l'internaute son adresse IP (telle que relevée par le serveur)"
