--- a/language/nl-NL/nl-NL.plg_system_bfstop.sys.ini
+++ b/language/nl-NL/nl-NL.plg_system_bfstop.sys.ini
@@ -66,6 +66,13 @@ ADAPTIVE_DELAY_THRSH_MAX_DESC="De bovengrens (in aantal foutieve aanlogpogingen 
 DELAY_FIELDSET_LABEL="Vertraging"
 NOTIFICATION_FIELDSET_LABEL="Informeren"
 GROUP_NOTIFICATION_ENABLED_LABEL="Gebruikersgroep informeren"
-GROUP_NOTIFICATION_ENABLED_DESC="Indien actief, de volledige hierna te selecteren gebruikersgroep zal worden geïnformeerd over de mislukte aanlogpogingen of geblokkeerde IP-adressen"
+GROUP_NOTIFICATION_ENABLED_DESC="Indien actief, de volledige hierna te selecteren gebruikersgroep zal worden geïnformeerd over de mislukte aanlogpogingen of geblokkeerde IP-adressen."
 USERGROUP_LABEL="Gebruikersgroep"
 USERGROUP_DESC="Kies een gebruikersgroep waarvan alle leden zullen worden geïnformeerd over over de mislukte aanlogpogingen of geblokkeerde IP-adressen (indien hierboven geactiveerd). Het is raadzaam om hiervoor een speciale gebruikersgroep samen te stellen of in ieder geval een groep te kiezen waarin met name systeembeheerders zitten zoals in de standaard 'Super Gebruikers' groep."
+NOTIFY_USE_PASSWORD_REMINDER_LABEL="Geef wachtwoord reset hint"
+NOTIFY_USE_PASSWORD_REMINDER_DESC="Bepaalt of en wanneer een informatieve boodschap gestuurd moet worden als er meerdere malen met een foutief wachtwoord is ingelogd."
+REMINDER_NOTIFY_ALWAYS="altijd"
+REMINDER_NOTIFY_1LEFT="wanneer er nog 1 aanlogpoging over is"
+REMINDER_NOTIFY_2LEFT="wanneer er nog 2 aanlogpogingen over zijn"
+BLOCKED_MSG_SHOWIP_LABEL="Toon IP-adres"
+BLOCKED_MSG_SHOWIP_DESC="Toon het IP-adres van de gebruiker als dat geblokkeerd is geraakt."
