--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+1.3.0 (2014-03-23)
+  - Inclusion guard fixes
+
 1.3.0beta1 (2014-03-15)
   - Allow showing IP address in blocked message
   - Show hint to use reset password functionality
