--- a/language/ca-ES/ca-ES.plg_system_bfstop.ini
+++ b/language/ca-ES/ca-ES.plg_system_bfstop.ini
@@ -1,4 +1,4 @@
-;traducció feta per nouespai 29-11-2013
+;traducció feta per nouespai 28/09/2014
 
 FAILED_LOGIN_ATTEMPT="Intent d'identificació erroni a %s"
 USERNAME="Nom d'usuari"
@@ -12,3 +12,5 @@ BLOCKED_IP_MESSAGE="La teva adreça IP ha estat bloquejada perquè hi havia mass
 X_ATTEMPTS_LEFT="Et resten %d intent(s) d'ingressar abans que la teva adreça IP sigui bloquejada. Si no recordes el nom o contrasenya, pots demanar al sistema que te la torni a enviar"
 BLOCKED_SUBJECT="%s: Intents fallits d'inici de sessió"
 BLOCKED_BODY="Hola,\n\nAlgú ha intentat iniciar sessió amb el teu nom d'usuari al lloc web '%s', però ha utilitzat una contrasenya incorrecta.\nAixò ha passat tantes vegades que s'ha bloquejat l'accés des de l'adreça Ip des d'on aquests intents de connexió es van originar per evitar abusos.\n\nEn cas que no siguis tu qui hagis fet aquests intents de connexió, si us plau, ignora aquest missatge. Hauríes de ser capaç d'iniciar sessió com de costum. \nHauries de ser responsable d'aquests intents de connexió, i o bé saber de nou la contrasenya (o utilitzar la funció de "Restablir contrasenya"). Ara tens l'oportunitat de desbloquejar l'adreça Ip, clicant aquest enllaç:\n%s\n\nAfectuosament, el gestor automàtica del lloc web!\n\nNota: Aquest és un missatge generat automàticament."
+PASSWORD_RESET_RECOMMENDED="Li avisem que un o més dels seus intents de connexió han fallat recentment. Si ho segueix intentant, aviat serà bloquejat. Per tant, li recomanem que utilitzi la funcionalitat <a href="%1$s"> per restablir la contrasenya!</a>"
+BLOCKED_CLIENT_IP="La vostra adreça IP és: %s."
