--- a/language/es-ES/es-ES.plg_system_bfstop.ini
+++ b/language/es-ES/es-ES.plg_system_bfstop.ini
@@ -1,3 +1,5 @@
+;traducción realizada por nouespai 28/09/2014
+
 FAILED_LOGIN_ATTEMPT="%s: Tentativa de entrada al sistema fracasada en %s"
 USERNAME="Usuario"
 IPADDRESS="IP-Dirección"
@@ -10,3 +12,5 @@ BLOCKED_IP_MESSAGE="Su dirección IP ha sido bloqueada por demasiadas tentativas
 X_ATTEMPTS_LEFT="Puede intentar (s) %d  antes de que su dirección IP sea bloqueada"
 BLOCKED_SUBJECT="%s: Tentativas fracasadas de entrada al sistema"
 BLOCKED_BODY="Hola!\n\nAlguien trató de entrar al sistema con su nombre de usuario en el sitio Web '%s', pero ha usado una contraseña incorrecta.\nEsto ha pasado tantas veces que el sistema ha bloqueado el acceso de la Dirección IP desde donde provinieron estas tentativas para prevenir su mal uso.\n\nSi no es usted quien está haciendo estas tentativas de entrada al sistema, por favor no haga caso de este mensaje. Usted debería ser capaz de entrar al sistema como lo hace habitualmente.\nSi es usted el responsable de estas tentativas de entrada al sistema, y quiere usar 'la nueva contraseña', usted tiene la posibilidad de desbloquear la dirección IP haciendo clic en este enlace:\n%s\n\nBest, la dirección de sitio Web automática\n\nNota: Este es un mensaje generado automáticamente."
+PASSWORD_RESET_RECOMMENDED="Le avisamos que uno o más de sus intentos de conexión han fallado recientemente. Si lo sigue intentando, pronto será bloqueado. Por tanto, le recomendamos que utilice la funcionalidad <a href="%1$s"> para restablecer la contraseña!"
+BLOCKED_CLIENT_IP="Su dirección IP es: %s."
