--- a/language/es-ES/es-ES.plg_system_bfstop.sys.ini
+++ b/language/es-ES/es-ES.plg_system_bfstop.sys.ini
@@ -1,59 +1,80 @@
+; traducció realizada por nouespai 29/08/2014
+
 PLG_SYSTEM_BFSTOP="System - Brute Force Stop"
-PLG_BFSTOP_DESC="<h2>Brute Force Stop</h2><div>Este plugin proporciona medios para evitar ataques de fuerza bruta contra su Joomla. Para este fin, el plugin de unión almacena la información de las tentativas de entradas fracasadas al sistema, de modo que alcanzando un número configurable de entradas fracasadas la dirección IP del atacante puede ser bloqueada. Además, usted puede configurar notificaciones sobre entradas fracasadas al sistema y bloqueo de direcciones IP, así como una tardanza variable para una tentativa de entrada fracasada al sistema.</div><br /><div><em>¡No olvide configurar y publicar el plugin de unión después de la instalación!</em><br />Si usted tiene alguna pregunta sobre el plugin, por favor visite el<a href='https://github.com/codeling/bfstop'>project site on github</a>. Debería encontrar ahí cualquier solución al problema sobre el plugin, no vacile en exponerlo en el <a href='https://github.com/codeling/bfstop/issues'>issue tracker</a>!</div><br /><div>En parte, este plugin de unión fue inspirado por los plugin de unión siguientes: Entrada al sistema Tronco Fracasado, Desvíe Entradas al sistema Fracasadas y Prohibida la Dirección/Variedad de IP. Muchísimas gracias para los autores de estos plugin de unión!<br />Brute Force Stop is a <a target='_blank' href='http://www.joomla.org/'>Joomla!</a> Plugin, published under the <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>.</div>"
-BLOCK_ENABLED_LABEL="Permita bloqueo"
-BLOCK_ENABLED_DESC="Si este plugin de unión debería bloquear direcciones IP. Cuando esté desactivado, ninguna nueva direccion IP será añadida a la lista de direcciones bloqueadas (aunque la lista será conservada)."
-USERID_LABEL="Seleccione un usuario"
-USERID_DESC="Seleccione al usuario al que se enviarán las notificaciones."
+PLG_BFSTOP_DESC="<h2>Brute Force Stop</h2><div>Este conector proporciona medios para evitar ataques de fuerza bruta contra tu Joomla. Para este fin, el conector almacena la información de las tentativas de entradas fracasadas al sistema, de modo que alcanzando un número configurable de entradas fracasadas la dirección IP del atacante puede ser bloqueada. Además, puedes configurar notificaciones sobre las entradas fracasadas al sistema y bloqueos de direcciones IP, así como un retardo variable para una tentativa de entrada fracasada al sistema.</div><br /><div><em>¡No olvides configurar y publicar el conector después de la instalación!</em><br />Si tienes alguna pregunta sobre el conector, por favor visita el<a href='https://github.com/codeling/bfstop'>proyecto en github</a>. Deberías encontrar allí cualquier solución al problema sobre el conector, no vaciles en exponerlo en el <a href='https://github.com/codeling/bfstop/issues'>Seguimiento de incidencias</a></div><br /><div>En parte, este conector fue inspirado por los conectores siguientes Login Failed Log, Redirect Failed Logins and Ban IP Address/Range. Muchísimas gracias para los autores.<br />Brute Force Stop es un conector <a target='_blank' href='http://www.joomla.org/'>Joomla!</a> publicado bajo la <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License.</a></div>"
+BLOCK_ENABLED_LABEL="Activar bloqueo"
+BLOCK_ENABLED_DESC="Si este conector debería bloquear direcciones IP. Cuando esté desactivado, ninguna nueva direccion IP será añadida a la lista de direcciones bloqueadas (aunque la lista será conservada)."
+USERID_LABEL="Selecciona un usuario"
+USERID_DESC="Selecciona al usuario al que se enviarán las notificaciones."
 EMAIL_ADDRESS_LABEL="Dirección de correo electrónico"
 EMAIL_ADDRESS_DESC="Dirección de correo electrónico donde se enviarán las notificaciones."
-NOTIFY_FAILED_NUMBER_LABEL="Fallado msgs por día"
-NOTIFY_FAILED_NUMBER_DESC="Con que frecuencia notificar al sistema sobre una entrada fracasada"
-NOTIFY_BLOCKED_NUMBER_LABEL="Bloqueado msgs por día"
-NOTIFY_BLOCKED_NUMBER_DESC="Con que frecuencia notificar sobre IP bloqueada al día"
+NOTIFY_FAILED_NUMBER_LABEL="Mensajes de inicio de sessión fallidos por día"
+NOTIFY_FAILED_NUMBER_DESC="Con qué frecuencia se notificarán inicios de sesión fallidos en un dia"
+NOTIFY_BLOCKED_NUMBER_LABEL="Mensajes de bloqueo por día"
+NOTIFY_BLOCKED_NUMBER_DESC="Con qué frecuencia se notificarán las IP bloqueadas en un día"
 DELAY_DURATION_LABEL="Retardo"
 DELAY_DURATION_DESC="Retardo (en segundos) en una tentativa de entrada fracasada al sistema"
 LOGGING_ENABLED_LABEL="Registro"
-LOGGING_ENABLED_DESC="Determina si un archivo histórico sobre las actividades del plugin de unión debería ser creado (esto sólo debería ser necesario en el caso de un problema; el archivo histórico puede ser encontrado en el directorio de troncos bajo el nombre plg_system_bfstop.log.php)"
+LOGGING_ENABLED_DESC="Determina si un archivo histórico sobre las actividades del conector debería ser creado (esto sólo debería ser necesario en el caso de un problema; el archivo histórico puede ser encontrado en el directorio raíz bajo el nombre plg_system_bfstop.log.php)"
 BLOCK_NUMBER_LABEL="Umbral de bloqueo"
-BLOCK_NUMBER_DESC="Con que frecuencia se puede intentar una entrada al sistema hasta que la IP sea bloqueada"
-BLOCKED_MESSAGE_LABEL="Mensaje bloqueado"
-BLOCKED_MESSAGE_DESC="El mensaje que le gustaría apareciese en la ventana del navegador de un usuario cuyo IP ha sido bloqueado debido a demasiadas tentativas fracasadas. Si lo deja vacío, el mensaje mostrado será: 'Su dirección de IP ha sido bloqueada por demasiadas tentativas de entrada fracasadas al sistema.'"
-BLOCK_DURATION_LABEL="Duración de bloqueo"
-BLOCK_DURATION_DESC="Determina cuánto tiempo una dirección IP es bloqueada antes de que le sea permitido tener acceso al sitio nuevamente"
+BLOCK_NUMBER_DESC="Cuantas veces un usuario puede equivocarse antes de que sea bloqueada la IP"
+BLOCKED_MESSAGE_LABEL="Mensaje de bloqueo"
+BLOCKED_MESSAGE_DESC="El mensaje que deseas que aparezca en la ventana del navegador de un usuario cuya IP ha sido bloqueada debido a demasiadas tentativas fracasadas. Si lo dejas vacío, el mensaje mostrado será: 'Su dirección de IP ha sido bloqueada por demasiadas tentativas de entrada fracasadas al sistema.'"
+BLOCK_DURATION_LABEL="Duración del bloqueo"
+BLOCK_DURATION_DESC="Determina cuánto tiempo una dirección IP será bloqueada antes de que le sea permitido tener acceso al sitio nuevamente"
 NOTIFY_REMAINING_ATTEMPTS_LABEL="Tentativas restantes"
-NOTIFY_REMAINING_ATTEMPTS_DESC="Permite o no notificaciones sobre tentativas restantes; de ser permitido, el usuario, después de cada tentativa de entrada al sistema fracasada, verá un mensaje sobre cuántas tentativas quedán disponibles antes de que la dirección IP sea bloqueada. Este ajuste es sólo activo si el bloqueo está permitido (si el bloqueo está desactivado, las entradas 'restantes' no tendrían sentido)."
-NOTIFY_BLOCKED_USER_LABEL="Mensaje de bloqueo de usuario"
-NOTIFY_BLOCKED_USER_DESC="Si se marca, en caso de una dirección de IP bloqueada, será enviada una notificación al usuario que trató de entrar al sistema)."
-USE_HTTP_ERROR_LABEL="Utilice Error HTTP"
+NOTIFY_REMAINING_ATTEMPTS_DESC="Activa o desactiva las notificaciones sobre tentativas restantes; de ser permitido, el usuario, después de cada tentativa de entrada al sistema fracasada, verá un mensaje sobre cuántas tentativas quedan disponibles antes de que la dirección IP sea bloqueada. Este ajuste es solo activo si el bloqueo está permitido (si el bloqueo está desactivado, las entradas 'restantes' no tendrían sentido)."
+NOTIFY_BLOCKED_USER_LABEL="Mensaje al usuario bloqueado"
+NOTIFY_BLOCKED_USER_DESC="Si se marca, en caso de una dirección de IP bloqueada, será enviada una notificación al usuario que trató de entrar al sistema.(Solo, por descontado, en caso de que sea un nom de usuario existente)"
+USE_HTTP_ERROR_LABEL="Utiliza error HTTP"
 USE_HTTP_ERROR_DESC="Si está activado, bfstop enviará un código de estado 403 (prohibido) si la dirección IP de los usuarios queda bloqueada"
-ENABLED="Permitido"
-DISABLED="No permitido"
+ENABLED="Activado"
+DISABLED="No activado"
 NOTIFY_UNLIMITED="Ilimitado"
 NOTIFY_NEVER="Nunca"
 BLOCK_UNLIMITED="Ilimitado"
-BLOCK_5MINUTES="5 Minutos"
-BLOCK_10MINUTES="10 Minutos"
-BLOCK_15MINUTES="15 Minutos"
-BLOCK_30MINUTES="30 Minutos"
-BLOCK_1HOUR="1 Hora"
-BLOCK_2HOURS="2 Horas"
-BLOCK_4HOURS="4 Horas"
-BLOCK_8HOURS="8 Horas"
-BLOCK_24HOURS="1 Día"
-; new in version 0.9.11:
-MAX_BLOCKS_BEFORE_LABEL="Permanente"
-MAX_BLOCKS_BEFORE_DESC="Determina después de cuántos intentos fracasados establece un bloqueo permanente. Los bloqueos anulados también cuentan; sólo aquellos bloqueos realizados por la parte del backend serán ignorados."
+BLOCK_5MINUTES="5 minutos"
+BLOCK_10MINUTES="10 minutos"
+BLOCK_15MINUTES="15 minutos"
+BLOCK_30MINUTES="30 minutos"
+BLOCK_1HOUR="1 hora"
+BLOCK_2HOURS="2 horas"
+BLOCK_4HOURS="4 horas"
+BLOCK_8HOURS="8 horas"
+BLOCK_24HOURS="1 día"
+BLOCK_1WEEK="1 semana"
+BLOCK_30DAYS="30 dias"
+MAX_BLOCKS_BEFORE_LABEL="Permanente después de"
+MAX_BLOCKS_BEFORE_DESC="Determina después de cuántos intentos fracasados se establece un bloqueo permanente. Los bloqueos anulados también cuentan; sólo aquellos bloqueos realizados por la parte de la administración serán ignorados."
 MAX_BLOCK_NEVER="Nunca"
 ENABLED_FOR_ORIGIN_LABEL="Activo para"
-ENABLED_FOR_ORIGIN_DESC="Determina en qué partes del sistema de Joomla! el plugin debería estar activo. Si elige frontend o backend, la otra parte no será considerada (por ejemplo, si ha configurado sólo backend, los intentos fallidos de inicio de frontend no se registrarán, pero tampoco las conexiones acertadas en el frontend reinicializarán el contador de conexión fracasado). Por favor tenga en cuenta que el bloqueo siempre afecta a todo el sitio, sin importar lo que elija.!"
-ENABLED_FOR_FRONTEND="Solo Frontend"
-ENABLED_FOR_BACKEND="Solo Backend"
-ENABLED_FOR_BOTH="Frontend y Backend"
-MAX_BLOCKS_BEFORE_LABEL="Permanente"
-MAX_BLOCKS_BEFORE_DESC="Determina después de cuántos intentos fracasados establece un bloqueo permanente. Los bloqueos anulados también cuentan; sólo aquellos bloqueos realizados por la parte del backend serán ignorados."
-MAX_BLOCK_NEVER="Nunca"
-ENABLED_FOR_ORIGIN_LABEL="Activo para"
-ENABLED_FOR_ORIGIN_DESC="Determina en qué partes del sistema de Joomla! el plugin debería estar activo. Si elige frontend o backend, la otra parte no será considerada (por ejemplo, si ha configurado sólo backend, los intentos fallidos de inicio de frontend no se registrarán, pero tampoco las conexiones acertadas en el frontend reinicializarán el contador de conexión fracasado). Por favor tenga en cuenta que el bloqueo siempre afecta a todo el sitio, sin importar lo que elija.!"
-ENABLED_FOR_FRONTEND="Solo Frontend"
-ENABLED_FOR_BACKEND="Solo Backend"
-ENABLED_FOR_BOTH="Frontend y Backend"
+ENABLED_FOR_ORIGIN_DESC="Determina en qué partes del sistema de Joomla! el conector debería estar activo. Si eliges frontal o administración, la otra parte no será considerada (por ejemplo, si has configurado sólo administración, los intentos fallidos de inicio al frontal no se registrarán, pero tampoco las conexiones acertadas en el frontal reinicializarán el contador de conexiones fracasadas). Por favor ten en cuenta que el bloqueo siempre afecta a todo el sitio, sin importar lo que elija.!"
+ENABLED_FOR_FRONTEND="Solo frontal"
+ENABLED_FOR_BACKEND="Solo administración"
+ENABLED_FOR_BOTH="Frontal y administración"
+FATAL="Error fatal"
+INFO="Mensaje informativo"
+DEBUG="Información detallada"
+DELETE_OLD_ENTRIES_LABEL="Suprime las entradas antiguas"
+DELETE_OLD_ENTRIES_DESC="Eliminar las entradas más antiguas que el número de semanas que figuran en este campo (establece en 0 para desactivar la supresión de las entradas antiguas)."
+ADAPTIVE_DELAY_LABEL="Retardo adaptativo"
+ADAPTIVE_DELAY_DESC="Adapta el retardo a la tasa actual de retardos que han fallado. Aumentará el retardo cada vez que hay un mayor número de inicios de sesión como una contramedida para los ataques distribuidos."
+ADAPTIVE_DELAY_MAX_LABEL="Retardo máximo"
+ADAPTIVE_DELAY_MAX_DESC="El plazo máximo para la respuesta a los intentos de conexión fallidos cuando el retardo adaptativo se activa"
+ADAPTIVE_DELAY_THRSH_MIN_LABEL="Nivel mínimo"
+ADAPTIVE_DELAY_THRSH_MIN_DESC="El nivel en el que el retardo adaptativo empieza a hacer efecto (medido en número de inicios de sesión fallidos en la última hora)"
+ADAPTIVE_DELAY_THRSH_MAX_LABEL="Nivel máximo"
+ADAPTIVE_DELAY_THRSH_MAX_DESC="El nivel en el que el retardo adaptativo llega al retardo máximo (medido en número de inicios de sesión fallidos en la última hora)"
+DELAY_FIELDSET_LABEL="Retardo"
+NOTIFICATION_FIELDSET_LABEL="Notificación"
+GROUP_NOTIFICATION_ENABLED_LABEL="Grupo de usuarios para la notificación"
+GROUP_NOTIFICATION_ENABLED_DESC="Si está activado, el grupo de usuarios seleccionados a continuación serán notificados en caso de inicios de sesión fallidos o IP prohibidas"
+USERGROUP_LABEL="Grupo de usuarios"
+USERGROUP_DESC="Selecciona un grupo de usuarios para notificarles sobre los inicios de sesión fallidos e IP prohibidas (si está activado anteriormente). Probablemente deberás crear un grupo dedicado para ello, o usar un grupo con administradores experimentados, como el grupo por defecto 'Superusuarios'".
+NOTIFY_USE_PASSWORD_REMINDER_LABEL="Recordatorio para el restablecimiento de la clave"
+NOTIFY_USE_PASSWORD_REMINDER_DESC="Si se ha de mostrar, y cuando, un recordatorio sobre el uso de la funcionalidad de recuperación de la contraseña en un inicio de sesión fallido"
+REMINDER_NOTIFY_ALWAYS="Siempre"
+REMINDER_NOTIFY_1LEFT="Cuando reste 1 intento"
+REMINDER_NOTIFY_2LEFT="Cuando queden 2 intento"
+BLOCKED_MSG_SHOWIP_LABEL="Muestra IP"
+BLOCKED_MSG_SHOWIP_DESC="Una vez bloqueado, mostrar al usuario su dirección IP (según la percepción del servidor)"
